--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,8 @@
-@font-face {
-  font-family: "Vazir";
-  src: url("../fonts/Vazir.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Vazir.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir.woff2") format("woff2"),
-    url("../fonts/Vazir.woff") format("woff"),
-    url("../fonts/Vazir.ttf") format("truetype");
-  /* Safari, Android, iOS */
-}
+@import url("../public/style.css");
 
 body {
   background-image: linear-gradient(180deg, #e9ecef, #fff 100px, #fff);
   background-repeat: no-repeat;
-  font-family: "Vazir", sans-serif;
 }
 
 .container {
