--- a/assets/public/style.css
+++ b/assets/public/style.css
@@ -29,3 +29,17 @@
 body {
   font-family: "Vazir", sans-serif;
 }
+
+#wait {
+  background: #f5f5f5;
+  z-index: 12345;
+  align-items: center;
+  text-align: center;
+  right: 0;
+  top: 0;
+  position: fixed;
+  height: 100dvh;
+  width: 100dvw;
+  display: flex;
+  justify-content: center;
+}
