Fix Bug in fullscreen wait overlay

--- a/assets/public/style.css
+++ b/assets/public/style.css
@@ -42,4 +42,10 @@ body {
   width: 100dvw;
   display: flex;
   justify-content: center;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html:has(#wait:not(.d-none)) {
+  overflow: hidden;
 }
